Fix overflow in code blocks (issue #2)

--- a/_docs/_styles/styles.styl
+++ b/_docs/_styles/styles.styl
@@ -60,7 +60,7 @@ a
 
 pre
     padding 1rem
-    overflow scroll
+    overflow auto
     -webkit-overflow-scrolling touch
     background tint( #fff1cc, 95% )
     border 1px solid shade( #ffe399, 15% )
